--- a/src/Home.css
+++ b/src/Home.css
@@ -1,20 +1,36 @@
 .link {
 height: 100vh;
-width: 100%;
+width: 100vw;
+overflow: hidden;
 text-align: center;
 background-color: grey;
     font-family: 'Helvetica', Arial, sans-serif;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
+background-size: cover;
 
+
+animation: image 10s infinite alternate;
 }
+
+@keyframes image {
+    0% {
+        background-image: url("/public/images/baclground4.jpeg");
+    }
+
+    100% {
+        background-image: url('/public/images/background3.jpeg');
+    }
+}
+
 
 h1 {
     grid-row: 1;
     grid-column: 2;
     position: relative;
     top: 30px;
+    color: white;
 }
 
 form {
@@ -24,6 +40,7 @@ form {
 
 form>label{
     font-size: 30px;
+    color: white;
 }
 
 form>input{
@@ -48,9 +65,10 @@ form>button {
     background-color: #212F3C;
     padding: 13px 10px 13px;
     color: white;
-    border-radius: 6px; 
+    border-radius: 10px; 
     font-size: 20px; 
     font-family: 'Helvetica', Arial, sans-serif;
+    border: solid 1px white;
 }
  
 form>button:hover{
