--- a/src/NasaDetails.css
+++ b/src/NasaDetails.css
@@ -5,9 +5,11 @@
     background-color: grey;
     color: white;
     display: grid;
-    grid-template-rows: 0.2fr 1fr 0.3fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr 3fr;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 10px;
+    background-image: url("/public/images/interstellar.jpeg");
+    background-size: cover;
 }
 
 .details>h2{
@@ -21,19 +23,40 @@
     grid-row: 2;
     grid-column: 1/span 3;
     border: 3px solid black;
-
+    background-image: url("/public/images/timemachine.webp");
+    background-position: center;
+        background-repeat: no-repeat;
+    background-size: contain;
+    background-color: grey;    
 }
 
 .details>h3{
     grid-row: 3;
-    grid-column: 3;
+    grid-column: 1;
+    margin: 8px;
 }
 .details>h4 {
-    grid-row: 3;
+    grid-row: 1;
     grid-column: 1;
+    margin: 8px;
+    
 }
 
 .details>p{
     grid-row: 4;
     grid-column: 1/span 3;
+}
+
+.details>button{
+    grid-row: 3;
+    grid-column: 3;
+    width: 50%;
+        height: 20%;
+        margin: 10px 0;
+        background-color: #212F3C;
+        padding: 5px 10px 30px;
+        color: white;
+        border-radius: 6px;
+        font-size: 15px;
+        font-family: 'Helvetica', Arial, sans-serif;
 }
