--- a/src/Home.css
+++ b/src/Home.css
@@ -74,3 +74,44 @@ form>button {
 form>button:hover{
     color: black;
 }
+
+@media (max-width: 810px) {
+
+form>label {
+        font-size: 20px;
+        color: white;
+    }
+
+form>input {
+        box-sizing: border-box;
+        margin: 8px 0;
+        width: 100%;
+        padding: 6px 15px 6px;
+    }
+#dateInput {
+    font-size: 15px;
+}
+
+form>button {
+    width: 70%;
+    height: 15%;
+    margin: 15px 0;
+    background-color: #212F3C;
+    padding: 4px 10px 6px;
+    color: white;
+    border-radius: 10px;
+    font-size: 15px;
+    font-family: 'Helvetica', Arial, sans-serif;
+    border: solid 1px white;
+}
+h1{
+    font-size:20px;
+}
+
+}
+
+@media (max-width: 480px) {
+    #dateInput {
+            font-size: 10px;
+        }
+}
