--- a/src/NasaDetails.css
+++ b/src/NasaDetails.css
@@ -1,12 +1,12 @@
 .details{
-    height: 100vh;
+    height: 100%;
     width: 100%;
     text-align: center;
     background-color: grey;
     color: white;
     display: grid;
     grid-template-rows: 1fr 5fr 1fr 3fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
     padding: 10px;
     background-image: url("/public/images/interstellar.jpeg");
     background-size: cover;
@@ -21,7 +21,7 @@
     height: 50vh;
     width: 100%;
     grid-row: 2;
-    grid-column: 1/span 3;
+    grid-column: 2;
     border: 3px solid black;
     background-image: url("/public/images/timemachine.webp");
     background-position: center;
@@ -59,4 +59,80 @@
         border-radius: 6px;
         font-size: 15px;
         font-family: 'Helvetica', Arial, sans-serif;
+}
+
+@media (max-width: 750px){
+    .details {
+            height: 100vh;
+            width: 100%;
+            text-align: center;
+            background-color: grey;
+            color: white;
+            display: grid;
+            grid-template-rows: 0.2fr 0.7fr 0.2fr 1fr;
+            grid-template-columns: 0.8fr 1fr 0.8fr;
+            padding: 10px;
+            background-image: url("/public/images/interstellar.jpeg");
+            background-size: cover;
+            font-size: 12px;
+            overflow: hidden;
+        }
+
+
+    .details>h2 {
+    grid-row: 1;
+    grid-column: 2;
+    padding:10px;
+    font-size: 15px;
+ }
+
+    .details>img{
+    height: 30vh;
+    width: 60vw;
+    grid-row: 2;
+    grid-column: 2;
+    border: 3px solid black;
+    background-image: url("/public/images/timemachine.webp");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: grey;
+}
+
+.details>h3{
+    grid-row: 3;
+    grid-column: 1;
+    margin: 2px;
+    padding: 5px;
+    font-size: 12px;
+}
+.details>h4 {
+    grid-row: 1;
+    grid-column: 1;
+    margin: 2px;
+    padding: 5px;
+    font-size: 12px;
+    
+}
+
+.details>p{
+    grid-row: 4;
+    grid-column: 1/span 3;
+    padding: 14px;
+}
+
+.details>button{
+    grid-row: 3;
+    grid-column: 3;
+    width: 80%;
+    height: 20%;
+    margin: 10px 0;
+    background-color: #212F3C;
+    padding: 3px 1px 20px;
+    color: white;
+    border-radius: 6px;
+    font-size: 10px;
+    font-family: 'Helvetica', Arial, sans-serif;
+    border: 1px solid white;
+}
 }
