--- a/src/NasaDetails.css
+++ b/src/NasaDetails.css
@@ -136,3 +136,22 @@
     border: 1px solid white;
 }
 }
+
+@media (max-width: 450px){
+    .details>h2 {
+            font-size: 13px;
+        }
+    
+        .details>h3 {
+            font-size: 10px;
+        }
+    
+        .details>h4 {
+            font-size: 10px;
+    
+        }
+    
+        .details>p {
+            font-size: 10px;
+        }
+}
