--- a/src/NasaDetails.css
+++ b/src/NasaDetails.css
@@ -61,7 +61,7 @@
         font-family: 'Helvetica', Arial, sans-serif;
 }
 
-@media (max-width: 750px){
+@media screen and (max-width: 750px){
     .details {
             height: 100vh;
             width: 100%;
@@ -119,6 +119,8 @@
     grid-row: 4;
     grid-column: 1/span 3;
     padding: 14px;
+    position: relative;
+    bottom: 30px;
 }
 
 .details>button{
@@ -137,7 +139,7 @@
 }
 }
 
-@media (max-width: 450px){
+@media screen and (max-width: 450px){
     .details>h2 {
             font-size: 13px;
         }
@@ -152,6 +154,6 @@
         }
     
         .details>p {
-            font-size: 10px;
+            font-size: 9px;
         }
 }
