--- a/src/NasaDetails.css
+++ b/src/NasaDetails.css
@@ -156,4 +156,19 @@
         .details>p {
             font-size: 9px;
         }
+
+        .details>button {
+        grid-row: 3;
+        grid-column: 3;
+        width: 90%;
+        height: 20%;
+        margin: 10px 0;
+        background-color: #212F3C;
+        padding: 3px 1px 20px;
+        color: white;
+        border-radius: 6px;
+        font-size: 8px;
+        font-family: 'Helvetica', Arial, sans-serif;
+        border: 1px solid white;
+                }
 }
