--- a/src/NasaDetails.css
+++ b/src/NasaDetails.css
@@ -1,6 +1,6 @@
 .details{
     height: 100%;
-    width: 100%;
+    width: 100vw;
     text-align: center;
     background-color: grey;
     color: white;
